V3/VERSION_INFO.md
# VERSION_INFO

version_name = V3

version_role = active_project_root

project_container_root = C:\Users\oscarau\OneDrive - Microsoft\Desktop\Forecast Generation Codebase Improvement\AEGIS-FORESCASTING-IMPROVEMENT

active_project_root = C:\Users\oscarau\OneDrive - Microsoft\Desktop\Forecast Generation Codebase Improvement\AEGIS-FORESCASTING-IMPROVEMENT\V3

based_on = V2 (full controlled copy, 2026-06-25; .venv / __pycache__ / *.pyc excluded, recreatable)

current_status = Stage 0 - V3 init baseline clone (parity validation)

next_stage = V3 Stage 1 - Methodology documents (project document + architecture diagram)

next_block = Stage 0 close - confirm V3 starts identically to V2 from its own root

## Active Root Rules

- All active work must happen inside V2 unless explicitly instructed otherwise.
- The parent folder is only a project container/version root.
- Historical artifacts must not be rewritten solely to change old path text.
- Shiny must remain read-only and must not recompute metrics or forecasts.
- Active work must use V2 as the project root.
